# diarization

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  loc.yml
examples/: stream_from_wav.rs
models/: SOURCE.md
scripts/: export-wespeaker-torchscript.py
src/: lib.rs  provenance.rs
src/cluster/: error.rs  mod.rs
src/cluster/online/: algo.rs  mod.rs  options.rs  tests.rs
src/embed/: embedder.rs  error.rs  mod.rs  model.rs  options.rs
src/offline/: mod.rs  owned.rs  parity_tests.rs
src/ops/: spill.rs
src/plda/: transform.rs
src/reconstruct/: rttm_parity_tests.rs
src/segment/: error.rs  mod.rs  model.rs
src/streaming/: cluster.rs  embedder.rs  mod.rs  offline_diarizer.rs  range.rs
tests/: integration_segment.rs  parity_drift_10.rs  parity_fixtures_endtoend.rs  parity_split_vs_bundled.rs
tests/parity/: README.md  run.sh
tests/parity/python/: capture_intermediates.py
