[package]
name = "diarization"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
# `dia` source is MIT OR Apache-2.0 (caller's choice).
# `models/plda/*.bin` are embedded into the compiled artifact via
# `include_bytes!` (see `src/plda/loader.rs`); those weights are
# CC-BY-4.0 with attribution required.
# `models/segmentation-3.0.onnx` is embedded under the
# `bundled-segmentation` feature (default-on) via `include_bytes!`
# (see `src/segment/model.rs`); upstream license is MIT (BUT/Bohdal et
# al., pyannote/segmentation-3.0). See `NOTICE` and `models/SOURCE.md`
# for attribution. Downstream redistributors of any binary linking `dia`
# MUST reproduce both the MIT segmentation attribution and the CC-BY-4.0
# PLDA attribution.
license = "(MIT OR Apache-2.0) AND MIT AND CC-BY-4.0 AND BSD-3-Clause"
repository = "https://github.com/al8n/diarization"
homepage = "https://github.com/al8n/diarization"
documentation = "https://docs.rs/diarization"
description = "Sans-I/O speaker diarization for streaming audio. Bundles the pyannote/segmentation-3.0 model and the speaker-diarization-community-1 PLDA weights — only the WeSpeaker embedding ONNX is BYO."
readme = "README.md"
# Keep `cargo package` lean. crates.io's hard limit is 10 MB
# compressed; we ship the bundled segmentation model (~6 MB) and
# PLDA `.bin` blobs (~530 KB) which are loaded via `include_bytes!`
# at runtime, but everything else dev-only is excluded.
#
# Verify with `cargo package --list --allow-dirty` and
# `ls -lh /Users/user/.cargo/target/package/diarization-*.crate`.
exclude = [
  # WeSpeaker artifacts: ~26 MB single-file ONNX (above crates.io
  # 10 MB hard limit), ~26 MB TorchScript variant, plus the older
  # external-data form `.onnx.data` sidecar (no longer used but
  # listed defensively in case someone re-adds it). Distributed
  # via FinDIT-Studio/dia-models on HF + GitHub release assets;
  # callers grab it via `scripts/download-embed-model.sh` or set
  # `DIA_EMBED_MODEL_PATH`.
  "models/wespeaker_resnet34_lm.onnx",
  "models/wespeaker_resnet34_lm.onnx.data",
  "models/wespeaker_resnet34_lm.pt",
  "models/wespeaker_resnet34_lm_packed.onnx",
  # PLDA `.npz` files — build-time sources for the `.bin` extraction
  # in `scripts/extract-plda-blobs.sh`; production code never reads
  # them. The `.bin` blobs are the runtime data and DO ship.
  "models/plda/*.npz",
  # Parity sub-workspace (its own `Cargo.toml` makes cargo skip
  # this by default; listed defensively so removing the inner
  # `[workspace]` later doesn't suddenly bloat the crate).
  "tests/parity/",
  # Dev-only trees: benches (Criterion harnesses), CI configs,
  # build / model-export scripts, GitHub Actions workflows,
  # codecov config, spike experiments. None of these are needed
  # by a downstream `cargo build` of the published crate.
  "benches/",
  "ci/",
  "scripts/",
  ".github/",
  ".codecov.yml",
  ".gitignore",
  "spikes/",
]

[features]
default = ["ort", "bundled-segmentation"]
# `Serialize`/`Deserialize` impls for the public `*Options` and
# `*Config` types so callers can persist diarization configuration
# (e.g. JSON/TOML/YAML profiles for different deployments). Mirrors
# the sister `silero` crate's pattern: `Duration` fields go through
# `humantime-serde` ("250ms" / "1.5s" rather than raw nanos), and
# foreign types (`ort::session::builder::GraphOptimizationLevel`)
# are bridged through wrapper modules. Off by default to keep the
# default dep graph minimal.
serde = ["dep:serde", "dep:humantime-serde"]
ort = ["dep:ort"]
# Embed `models/segmentation-3.0.onnx` (~6 MB) into the compiled artifact
# via `include_bytes!` so callers can construct `SegmentModel::bundled()`
# without provisioning the file on disk. Off-switch for callers who BYO a
# different segmentation model (e.g. a fine-tuned variant) — they go
# through `SegmentModel::from_file` / `from_memory` as before. Adds
# ~6 MB to the dia binary; turn off with `default-features = false`
# if you ship the model separately. Requires `ort` (not gated separately
# because the bundled bytes are useless without the inference runtime
# they feed into). Source: pyannote/segmentation-3.0 on HuggingFace
# (MIT — see NOTICE for attribution).
bundled-segmentation = ["ort"]
# Alternative embedding inference backend via tch (libtorch C++ bindings).
# Off by default — pulls in libtorch (~600 MB shared library) and
# typically requires `LIBTORCH` env var pointing at a libtorch install.
# Enables a TorchScript backend for the WeSpeaker embedding model that
# matches pyannote's PyTorch inference bit-exactly on hard cases (e.g.
# heavy-overlap fixtures where ONNX→ORT diverges by O(1) per element).
# When on, callers can construct via `EmbedModel::from_torchscript_file`
# in addition to the existing `from_file` (ONNX).
tch = ["dep:tch"]

# ─── ONNX Runtime execution providers ─────────────────────────────────
# Each `*` feature pulls in the matching `ort` execution provider.
# All are off by default; the default ort dispatch runs on CPU.
#
# **Runtime requirements**: each EP needs the corresponding native
# library installed on the host (CUDA toolkit, ROCm runtime,
# DirectML.dll, etc.). The ort `download-binaries` default ships
# CPU-only; vendor-specific EPs require either a vendor build of
# onnxruntime or `LD_LIBRARY_PATH` / `DYLD_LIBRARY_PATH` pointing at
# the vendor libs. See <https://ort.pyke.io/perf/execution-providers>
# for vendor-specific install notes.
#
# Callers register an EP via `SegmentModelOptions::with_providers` /
# `EmbedModelOptions::with_providers`, or use the `dia::ep::auto_providers`
# helper (returns the EPs compiled in, in a sensible priority order).
coreml = ["ort", "ort/coreml"]
cuda = ["ort", "ort/cuda"]
tensorrt = ["ort", "ort/tensorrt"]
directml = ["ort", "ort/directml"]
rocm = ["ort", "ort/rocm"]
migraphx = ["ort", "ort/migraphx"]
openvino = ["ort", "ort/openvino"]
webgpu = ["ort", "ort/webgpu"]
xnnpack = ["ort", "ort/xnnpack"]
onednn = ["ort", "ort/onednn"]
cann = ["ort", "ort/cann"]
acl = ["ort", "ort/acl"]
qnn = ["ort", "ort/qnn"]
nnapi = ["ort", "ort/nnapi"]
tvm = ["ort", "ort/tvm"]
azure = ["ort", "ort/azure"]
# Convenience meta-feature: enable the common GPU-flavored EPs across
# vendors. The caller still picks at runtime which provider to register
# (only one will accelerate; the rest stay dormant). Useful for
# distributing a single binary that detects the host GPU and dispatches.
gpu = [
  "cuda",
  "tensorrt",
  "coreml",
  "directml",
  "rocm",
  "webgpu",
]
# Internal feature for benchmarks. Exposes pub(crate) modules
# (`vbx`, `ahc`, `centroid`, `pipeline`, `reconstruct`, `hungarian`,
# `plda`) as `pub` so external benches in `benches/*.rs` can call the
# inner kernels directly. Not part of the public API contract — the
# `_` prefix marks it as private.
_bench = []

[dependencies]
mediatime = "0.1"
thiserror = "2"
ort = { version = "2.0.0-rc.12", optional = true }
tch = { version = "0.24", optional = true }

# Real-valued FFT for the bit-exact torchaudio.compliance.kaldi.fbank
# port (see `src/embed/fbank.rs`). PyTorch's `torch.fft.rfft`
# routes to pocketfft on CPU; `realfft` wraps `rustfft`'s
# Cooley-Tukey radix-2 path which produces the same spectrum within
# ~1e-7 relative — small enough that the resnet+pooling output stays
# within sub-ULP of pyannote on the 14-audio bench.
realfft = "3"
nalgebra = "0.34"
rand = { version = "0.10", default-features = false }
rand_chacha = { version = "0.10", default-features = false }

# AHC initialization (centroid-method linkage).
kodama = "0.3"

# Allocation-free integer→decimal-string rendering for pyannote's
# `Annotation.labels()` lex-sort (cluster id → SPEAKER_NN label
# remapping in RTTM emission).
itoa = "1"

# Spill backend: AHC pdist / reconstruct grid / aggregate frame
# buffers cross 256 MB on pathological inputs. The spill module
# falls back to file-backed mmap above the configurable threshold
# so the same inputs succeed at the cost of disk I/O instead of
# OOM-aborting the `Result`-returning pipeline. See
# `src/ops/spill.rs`.
memmapix = "0.9"
bytemuck = "1"
tempfile = "3"
# Cross-platform `File::allocate` for the spill backend
# (`posix_fallocate` on Linux, `F_PREALLOCATE` on macOS,
# `SetFileValidData`/`SetEndOfFile` on Windows). Reserves disk blocks
# before mmap so writes through the mapping cannot `SIGBUS` on
# `ENOSPC`.
fs4 = "1"

# `rustix::fs::OFlags::TMPFILE` on Linux/Android: the spill backend
# opens an anonymous (never-linked) tempfile so there is no race
# window between create + unlink for a same-UID process to grab a
# writable fd. `tempfile`'s Linux fast path also tries `O_TMPFILE`
# but silently falls back to `mkstemp + unlink` on filesystems
# without support — we want to surface that as a typed error
# instead.
[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
rustix = { version = "1", features = ["fs"] }

# Cross-platform optional deps below. They MUST stay outside the
# `[target.'cfg(...)']` block above — that block scopes its entries
# to Linux/Android only.

# `serde` impls for the public `*Options` / `*Config` types so
# callers can persist diarization configuration.
[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

# Provides the "humantime" string format ("250ms", "1.5s") for
# `Duration` fields when the `serde` feature is on.
[dependencies.humantime-serde]
version = "1"
optional = true


[dev-dependencies]
anyhow = "1"
criterion = "0.8"
hound = "3"
# Sister `silero` crate (VAD for streaming voice-range detection).
# Only the `run_streaming_pipeline` example consumes it — the lib
# itself never imports `silero`. Tracked as a dev-dependency rather
# than an optional `[dependencies.silero] + silero-vad` feature pair
# because (a) the lib has no code path through silero, (b)
# downstream consumers never need it transitively, (c) examples have
# access to dev-dependencies, so keeping it here both lightens the
# public dependency graph and the feature surface.
silero = "0.4"
# `diarization::plda` parity tests load captured `.npz` artifacts.
# Production code embeds the PLDA weights via `include_bytes!` and
# does not depend on npyz.
npyz = { version = "0.9", features = ["npz"] }
# Used by the `serde` feature's roundtrip tests.
serde_json = "1"

[[example]]
path = "examples/run_owned_pipeline.rs"
name = "run_owned_pipeline"
required-features = ["ort", "bundled-segmentation"]

[[example]]
path = "examples/run_owned_pipeline_tch.rs"
name = "run_owned_pipeline_tch"
# Calls `SegmentModel::bundled()` which needs `bundled-segmentation`.
required-features = ["tch", "ort", "bundled-segmentation"]

[[example]]
path = "examples/run_streaming_pipeline.rs"
name = "run_streaming_pipeline"
# Calls `SegmentModel::bundled()` which needs `bundled-segmentation`,
# and `EmbedModel::from_file` which needs `ort`. `silero` itself is a
# dev-dependency, always available to examples — no feature gate.
required-features = ["ort", "bundled-segmentation"]

[[bench]]
path = "benches/segment.rs"
name = "segment"
harness = false

[[bench]]
path = "benches/ops.rs"
name = "ops"
harness = false
required-features = ["_bench"]

[[bench]]
path = "benches/vbx.rs"
name = "vbx"
harness = false
required-features = ["_bench"]

[[bench]]
path = "benches/ahc.rs"
name = "ahc"
harness = false
required-features = ["_bench"]

[[bench]]
path = "benches/centroid.rs"
name = "centroid"
harness = false
required-features = ["_bench"]

[[bench]]
path = "benches/pipeline.rs"
name = "pipeline"
harness = false
required-features = ["_bench"]

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = "thin"
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
# Pin the docs.rs feature set explicitly. `all-features = true`
# would enable `tch` (needs LIBTORCH on the build host) and the
# `_bench` internal feature — neither of which docs.rs provides.
# The list below covers the full public API surface: default
# (`ort` + `bundled-segmentation`), optional `serde`, and EVERY per-EP
# feature so that every `dia::ep::*` re-export and `#[doc(cfg(...))]`
# annotation renders on docs.rs (the `gpu` meta-feature alone covers
# only 6 of the 16 EPs and would silently hide the rest). `silero` is
# a dev-dependency for the streaming example only and does not appear
# in the lib's public docs.
features = [
  "ort",
  "bundled-segmentation",
  "serde",
  "coreml",
  "cuda",
  "tensorrt",
  "directml",
  "rocm",
  "migraphx",
  "openvino",
  "webgpu",
  "xnnpack",
  "onednn",
  "cann",
  "acl",
  "qnn",
  "nnapi",
  "tvm",
  "azure",
]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
  'cfg(diarization_force_scalar)',
  'cfg(diarization_disable_avx2)',
  'cfg(diarization_disable_avx512)',
  'cfg(diarization_assert_avx2)',
  'cfg(diarization_assert_avx512)',
  'cfg(diarization_assert_neon)',
] }
