[package]
name = "diarization"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
# `dia` source is MIT OR Apache-2.0 (caller's choice). The one third-party
# artifact this crate bundles into its own compiled output is
# `models/segmentation-3.0.onnx`, embedded under the `bundled-segmentation`
# feature (default-on) via `include_bytes!` (see `src/segment/model.rs`);
# upstream license is MIT (pyannote/segmentation-3.0, CNRS / Hervé Bredin).
# Hence the SPDX below is `(MIT OR Apache-2.0) AND MIT`.
#
# The CC-BY-4.0 PLDA weights and the SciPy / torchaudio / FluidAudio source
# ports now live in the `diaric` dependency, which embeds/vendors them into
# any linking binary; their SPDX terms are declared by `diaric`, not
# restated here. Downstream redistributors of any binary linking `dia` MUST
# reproduce the MIT segmentation attribution AND `diaric`'s `NOTICE` (which
# carries the CC-BY-4.0 PLDA and the BSD/Apache port attributions). See this
# crate's `NOTICE` and `models/SOURCE.md`.
license = "(MIT OR Apache-2.0) AND MIT"
repository = "https://github.com/al8n/diarization"
homepage = "https://github.com/al8n/diarization"
documentation = "https://docs.rs/diarization"
description = "Sans-I/O speaker diarization for streaming audio. Bundles the pyannote/segmentation-3.0 model and sources the speaker-diarization-community-1 PLDA weights from its diaric dependency — only the WeSpeaker embedding ONNX is BYO."
readme = "README.md"
# Keep `cargo package` lean. crates.io's hard limit is 10 MB
# compressed; we ship the bundled segmentation model (~6 MB), loaded
# via `include_bytes!` at runtime, but everything else dev-only is
# excluded. (The PLDA `.bin` blobs now ship inside the `diaric`
# dependency, not this crate.)
#
# Verify with `cargo package --list --allow-dirty` and
# `ls -lh /Users/user/.cargo/target/package/diarization-*.crate`.
exclude = [
  # WeSpeaker artifacts: ~26 MB single-file ONNX (above crates.io
  # 10 MB hard limit), ~26 MB TorchScript variant, plus the older
  # external-data form `.onnx.data` sidecar (no longer used but
  # listed defensively in case someone re-adds it). Distributed
  # via FinDIT-Studio/dia-models on HF + GitHub release assets;
  # callers grab it via `scripts/download-embed-model.sh` or set
  # `DIA_EMBED_MODEL_PATH`.
  "models/wespeaker_resnet34_lm.onnx",
  "models/wespeaker_resnet34_lm.onnx.data",
  "models/wespeaker_resnet34_lm.pt",
  "models/wespeaker_resnet34_lm_packed.onnx",
  # Parity sub-workspace (its own `Cargo.toml` makes cargo skip
  # this by default; listed defensively so removing the inner
  # `[workspace]` later doesn't suddenly bloat the crate).
  "tests/parity/",
  # Dev-only trees: benches (Criterion harnesses), CI configs,
  # build / model-export scripts, GitHub Actions workflows,
  # codecov config, spike experiments. None of these are needed
  # by a downstream `cargo build` of the published crate.
  "benches/",
  "ci/",
  "scripts/",
  ".github/",
  ".codecov.yml",
  ".gitignore",
  "spikes/",
]

[features]
default = ["ort", "bundled-segmentation"]
# `Serialize`/`Deserialize` impls for the public `*Options` and
# `*Config` types so callers can persist diarization configuration
# (e.g. JSON/TOML/YAML profiles for different deployments). Mirrors
# the sister `silero` crate's pattern: `Duration` fields go through
# `humantime-serde` ("250ms" / "1.5s" rather than raw nanos), and
# foreign types (`ort::session::builder::GraphOptimizationLevel`)
# are bridged through wrapper modules. Off by default to keep the
# default dep graph minimal.
# Also propagates to `diaric/serde` so the re-exported `SpillOptions` (and
# any other `diaric` config type embedded in this crate's `*Options`) gets
# its `Serialize`/`Deserialize` impls.
serde = ["dep:serde", "dep:humantime-serde", "diaric/serde"]
ort = ["dep:ort"]
# Embed `models/segmentation-3.0.onnx` (~6 MB) into the compiled artifact
# via `include_bytes!` so callers can construct `SegmentModel::bundled()`
# without provisioning the file on disk. Off-switch for callers who BYO a
# different segmentation model (e.g. a fine-tuned variant) — they go
# through `SegmentModel::from_file` / `from_memory` as before. Adds
# ~6 MB to the dia binary; turn off with `default-features = false`
# if you ship the model separately. Requires `ort` (not gated separately
# because the bundled bytes are useless without the inference runtime
# they feed into). Source: pyannote/segmentation-3.0 on HuggingFace
# (MIT — see NOTICE for attribution).
bundled-segmentation = ["ort"]
# Alternative embedding inference backend via tch (libtorch C++ bindings).
# Off by default — pulls in libtorch (~600 MB shared library) and
# typically requires `LIBTORCH` env var pointing at a libtorch install.
# Enables a TorchScript backend for the WeSpeaker embedding model that
# matches pyannote's PyTorch inference bit-exactly on hard cases (e.g.
# heavy-overlap fixtures where ONNX→ORT diverges by O(1) per element).
# When on, callers can construct via `EmbedModel::from_torchscript_file`
# in addition to the existing `from_file` (ONNX).
tch = ["dep:tch"]

# ─── ONNX Runtime execution providers ─────────────────────────────────
# Each `*` feature pulls in the matching `ort` execution provider.
# All are off by default; the default ort dispatch runs on CPU.
#
# **Runtime requirements**: each EP needs the corresponding native
# library installed on the host (CUDA toolkit, ROCm runtime,
# DirectML.dll, etc.). The ort `download-binaries` default ships
# CPU-only; vendor-specific EPs require either a vendor build of
# onnxruntime or `LD_LIBRARY_PATH` / `DYLD_LIBRARY_PATH` pointing at
# the vendor libs. See <https://ort.pyke.io/perf/execution-providers>
# for vendor-specific install notes.
#
# Callers register an EP via `SegmentModelOptions::with_providers` /
# `EmbedModelOptions::with_providers`, or use the `dia::ep::auto_providers`
# helper (returns the EPs compiled in, in a sensible priority order).
coreml = ["ort", "ort/coreml"]
cuda = ["ort", "ort/cuda"]
tensorrt = ["ort", "ort/tensorrt"]
directml = ["ort", "ort/directml"]
rocm = ["ort", "ort/rocm"]
migraphx = ["ort", "ort/migraphx"]
openvino = ["ort", "ort/openvino"]
webgpu = ["ort", "ort/webgpu"]
xnnpack = ["ort", "ort/xnnpack"]
onednn = ["ort", "ort/onednn"]
cann = ["ort", "ort/cann"]
acl = ["ort", "ort/acl"]
qnn = ["ort", "ort/qnn"]
nnapi = ["ort", "ort/nnapi"]
tvm = ["ort", "ort/tvm"]
azure = ["ort", "ort/azure"]
# Convenience meta-feature: enable the common GPU-flavored EPs across
# vendors. The caller still picks at runtime which provider to register
# (only one will accelerate; the rest stay dormant). Useful for
# distributing a single binary that detects the host GPU and dispatches.
gpu = [
  "cuda",
  "tensorrt",
  "coreml",
  "directml",
  "rocm",
  "webgpu",
]
[dependencies]
# The backend-free diarization core: clustering (offline AHC→VBx, online),
# PLDA projection, pipeline assembly, reconstruction/RTTM, frame
# aggregation, provenance, kaldi-fbank DSP + embedding value types, and
# the SIMD/mmap numeric ops (including the `axpy_f32` embedding-aggregation
# primitive). Everything ort/tch-free that this crate used to define now
# lives in `diaric` and is re-exported from `lib.rs`.
#
# Rev-pinned to the `feat/import-core` HEAD (fresh-clone resolution, day
# one — a clean `diarization` clone with no sibling checkout must resolve).
# T3 re-pins this to the diaric MERGE sha once the owner merges the diaric
# PR.
diaric = { git = "https://github.com/findit-studio/diaric", rev = "877189e434aff080c1340313caf8801cea946af3" }

thiserror = "2"
ort = { version = "2.0.0-rc.12", optional = true }
tch = { version = "0.24", optional = true }

# `serde` impls for the public `*Options` / `*Config` types so
# callers can persist diarization configuration.
[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

# Provides the "humantime" string format ("250ms", "1.5s") for
# `Duration` fields when the `serde` feature is on.
[dependencies.humantime-serde]
version = "1"
optional = true


[dev-dependencies]
anyhow = "1"
hound = "3"
# Sister `silero` crate (VAD for streaming voice-range detection).
# Only the `run_streaming_pipeline` example consumes it — the lib
# itself never imports `silero`. Tracked as a dev-dependency rather
# than an optional `[dependencies.silero] + silero-vad` feature pair
# because (a) the lib has no code path through silero, (b)
# downstream consumers never need it transitively, (c) examples have
# access to dev-dependencies, so keeping it here both lightens the
# public dependency graph and the feature surface.
silero = "0.4"
# `.npz` fixture loading for the ONNX end-to-end parity tests
# (`tests/parity_drift_10.rs`, `tests/parity_fixtures_endtoend.rs`) and the
# `run_offline_from_captures` example. Production code embeds the PLDA
# weights via `include_bytes!` (in `diaric`) and does not depend on npyz.
npyz = { version = "0.9", features = ["npz"] }
# Used by the `serde` feature's roundtrip tests.
serde_json = "1"

[[example]]
path = "examples/run_owned_pipeline.rs"
name = "run_owned_pipeline"
required-features = ["ort", "bundled-segmentation"]

[[example]]
path = "examples/run_owned_pipeline_tch.rs"
name = "run_owned_pipeline_tch"
# Calls `SegmentModel::bundled()` which needs `bundled-segmentation`.
required-features = ["tch", "ort", "bundled-segmentation"]

[[example]]
path = "examples/run_streaming_pipeline.rs"
name = "run_streaming_pipeline"
# Calls `SegmentModel::bundled()` which needs `bundled-segmentation`,
# and `EmbedModel::from_file` which needs `ort`. `silero` itself is a
# dev-dependency, always available to examples — no feature gate.
required-features = ["ort", "bundled-segmentation"]

[package.metadata.docs.rs]
# Pin the docs.rs feature set explicitly. `all-features = true`
# would enable `tch`, which needs LIBTORCH on the build host —
# something docs.rs does not provide.
# The list below covers the full public API surface: default
# (`ort` + `bundled-segmentation`), optional `serde`, and EVERY per-EP
# feature so that every `dia::ep::*` re-export and `#[doc(cfg(...))]`
# annotation renders on docs.rs (the `gpu` meta-feature alone covers
# only 6 of the 16 EPs and would silently hide the rest). `silero` is
# a dev-dependency for the streaming example only and does not appear
# in the lib's public docs.
features = [
  "ort",
  "bundled-segmentation",
  "serde",
  "coreml",
  "cuda",
  "tensorrt",
  "directml",
  "rocm",
  "migraphx",
  "openvino",
  "webgpu",
  "xnnpack",
  "onednn",
  "cann",
  "acl",
  "qnn",
  "nnapi",
  "tvm",
  "azure",
]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
  'cfg(diarization_force_scalar)',
  'cfg(diarization_disable_avx2)',
  'cfg(diarization_disable_avx512)',
  'cfg(diarization_assert_avx2)',
  'cfg(diarization_assert_avx512)',
  'cfg(diarization_assert_neon)',
] }
